--- a/index.html
+++ b/index.html
@@ -235,8 +235,154 @@
             <div class="card-inner" id="skills-card">
                 <div class="card-wrap">
                     <div class="content skills">
-                        <div class="title">
-                            <p>Compétences</p>
+                        <div class="row">
+                            <div class="col-6 big-icon text-center titre">
+                                <i class="fas fa-user"></i>
+                                <p>COMPÉTENCES</p>
+                            </div>
+                            <div class="col-6 transversales">
+                                <div class="title">
+                                    <div class="icon">
+                                        <i class="fa fa-list"></i>
+                                    </div>
+                                    <div class="name">Transversales</div>
+                                </div>
+                                <ul class="liste">
+                                    <li class="row">
+                                        <div class="icon"><i class="fas fa-check"></i></div>
+                                        <div class="name">Travail en équipe</div>
+                                    </li>
+                                    <li class="row">
+                                        <div class="icon"><i class="fas fa-check"></i></div>
+                                        <div class="name">Gestion de projet</div>
+                                    </li>
+                                    <li class="row">
+                                        <div class="icon"><i class="fas fa-check"></i></div>
+                                        <div class="name">Scrum Agile</div>
+                                    </li>
+                                    <li class="row">
+                                        <div class="icon"><i class="fas fa-check"></i></div>
+                                        <div class="name">Communication</div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-6 coding">
+                                <div class="title mt-2">
+                                    <div class="icon">
+                                        <i class="fa fa-code"></i>
+                                    </div>
+                                    <div class="name">Langages</div>
+                                </div>
+                                <div class="row mt-3">
+                                    <div class="col-6">
+                                        <div class="icons">
+                                            <i class="fab fa-html5"></i>
+                                            <i class="fab fa-css3-alt"></i>
+                                        </div>
+                                        <div class="name mb-4">HTML / CSS</div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="icons">
+                                            <i class="fab fa-php"></i>
+                                            <i class="fas fa-database"></i>
+                                        </div>
+                                        <div class="name mb-4">PHP / MySQL</div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="icons">
+                                            <i class="fab fa-js"></i>
+                                        </div>
+                                        <div class="name">Javascript / TypeScript</div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="icons">
+                                            <i class="fab fa-wordpress-simple"></i>
+                                            <i class="fab fa-joomla"></i>
+                                        </div>
+                                        <div class="name">Wordpress / Joomla</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 learning">
+                                <div class="title mt-2">
+                                    <div class="icon">
+                                        <i class="fa fa-code"></i>
+                                    </div>
+                                    <div class="name">En apprentissage</div>
+                                </div>
+                                <div class="row mt-3">
+                                    <div class="col-6">
+                                        <div class="icons">
+                                            <i class="fab fa-angular"></i>
+                                            <i class="fab fa-vuejs"></i>
+                                        </div>
+                                        <div class="name mb-4">Angular / VueJS</div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="icons">
+                                            <i class="fab fa-node-js"></i>
+                                        </div>
+                                        <div class="name mb-4">NodeJS</div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="icons">
+                                            <i class="fab fa-symfony"></i>
+                                        </div>
+                                        <div class="name">Symfony</div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="icons">
+                                            <i class="fab fa-swift"></i>
+                                            <i class="fab fa-java"></i>
+                                        </div>
+                                        <div class="name">Swift / Java</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 design">
+                                <div class="title mt-3">
+                                    <div class="icon">
+                                        <i class="fa fa-paint-brush"></i>
+                                    </div>
+                                    <div class="name">Design</div>
+                                </div>
+                                <ul>
+                                    <li>
+                                        <div class="name">Adobe XD</div>
+                                        <div class="progress">
+                                            <div class="pourcentage" style="width: 85%;"></div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="name">Photoshop / Illustrator</div>
+                                        <div class="progress">
+                                            <div class="pourcentage" style="width: 70%;"></div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-6 langues mb-2">
+                                <div class="title mt-3">
+                                    <div class="icon">
+                                        <i class="fa fa-flag"></i>
+                                    </div>
+                                    <div class="name">Langues</div>
+                                </div>
+                                <ul>
+                                    <li>
+                                        <div class="name">Anglais</div>
+                                        <div class="progress">
+                                            <div class="pourcentage" style="width: 60%;"></div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="name">Espagnol</div>
+                                        <div class="progress">
+                                            <div class="pourcentage" style="width:80%;"></div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
