--- a/index.html
+++ b/index.html
@@ -846,8 +846,8 @@
                             <div class="col col-12 etape7">
                                 <div class="stage-title">Transfert d'hébergement</div>
                                 <p>
-                                    La plateforme Alvéole est hébergée sur le domaine <b>asso-seve.org</b> alors que 
-                                    le FormEvent est hébergé sur <b>eve-grenoble.fr</b>. Cette organisation pose problème
+                                    La plateforme Alvéole est hébergée sur le domaine <b>eve-grenoble.fr</b> alors que 
+                                    le FormEvent est hébergé sur <b>asso-seve.org</b>. Cette organisation pose problème
                                     car l'association qui gère actuellement le bâtiment sera différente l'année prochaine. <br><br>
                                     Il fallait donc <b>transférer la base de données et les ressources du site</b>. <br><br>
                                     Je me suis confronté à un problème lors de ce transfert : les <b>versions de PHP étaient différentes</b>
